--- a/index.html
+++ b/index.html
@@ -23,24 +23,30 @@
 
 <P>
 <CENTER>
-<IMG SRC="logo.gif" WIDTH=512 HEIGHT=384 ALT="東三河サイエンスカフェ（ロゴ）" ALIGN=TOP>
+<IMG SRC="./logo.gif" WIDTH=512 HEIGHT=384 ALT="東三河サイエンスカフェ（ロゴ）" ALIGN=TOP>
 </CENTER>
 <P>
-
+ 
+<P>
+<CENTER>
+<a href="./230406kawai.pdf>第３０３回パンフレット</a>
+</CENTER>
+<P>
+ 
 <TABLE BORDER=0 BGCOLOR=#660000 width=100%><TR>
 <TD align=center> </TD></TR></TABLE>
 
 <CENTER><FONT face="Arial, Sans-Serif" size="2">
-<A HREF="http://www.ita.tutkie.tut.ac.jp/~kawai/kawai/disclaimer.html">Copyright (c) 2007, Kazuhisa Kawai, All Rights Reserved.</A><BR>
+<A HREF="./disclaimer.html">Copyright (c) 2023, Kazuhisa Kawai, All Rights Reserved.</A><BR>
 Please send comments to:
- <A HREF="mailto:kawai@tut.ac.jp">kawai@tut.ac.jp</A><BR>
-Last updated July 25, 2007.<BR>
-Since July 25, 2007.
+ <A HREF="mailto:kawai@tut.jp">kawai@tut.jp</A><BR>
+Last updated March 29, 2023.<BR>
+Since March 29, 2023, July 25, 2007.
 </FONT></CENTER>
 
 </TD></TR></TABLE>
 
-<TD WIDTH=1 BGCOLOR=black><IMG SRC="/~kawai/gif/1pixel.gif" WIDTH=1 HEIGHT=1>
+<TD WIDTH=1 BGCOLOR=black><IMG SRC="./1pixel.gif" WIDTH=1 HEIGHT=1>
 </TD>
 </TR></TABLE>
 
