--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <TABLE WIDTH=802 CELLPADDING=0 CELLSPACING=0 BORDER=0>
 <TR VALING=top>
-<TD WIDTH=1 BGCOLOR=black><IMG SRC="/~kawai/gif/1pixel.gif" WIDTH=1 HEIGHT=1>
+<TD WIDTH=1 BGCOLOR=black><IMG SRC="./1pixel.gif" WIDTH=1 HEIGHT=1>
 </TD>
 <TD>
 <TABLE WIDTH=800 CELLPADDING=10 CELLSPACING=0 BORDER=0>
@@ -29,7 +29,7 @@
  
 <P>
 <CENTER>
-<a href="./230406kawai.pdf>第３０３回パンフレット</a>
+<a href="./230406kawai.pdf">第３０３回パンフレット</a>
 </CENTER>
 <P>
  
