--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <P>
 <CENTER>
-<IMG SRC="./logo.gif" WIDTH=512 HEIGHT=384 ALT="東三河サイエンスカフェ（ロゴ）" ALIGN=TOP>
+<IMG SRC="./logo-anime-wo-30.gif" WIDTH=512 HEIGHT=384 ALT="東三河サイエンスカフェ（ロゴ）" ALIGN=TOP>
 </CENTER>
 <P>
  
@@ -37,11 +37,11 @@
 <TD align=center> </TD></TR></TABLE>
 
 <CENTER><FONT face="Arial, Sans-Serif" size="2">
-<A HREF="./disclaimer.html">Copyright (c) 2023, Kazuhisa Kawai, All Rights Reserved.</A><BR>
+<A HREF="./disclaimer.html">Copyright (c) 2007-2023, Kazuhisa Kawai, All Rights Reserved.</A><BR>
 Please send comments to:
  <A HREF="mailto:kawai@tut.jp">kawai@tut.jp</A><BR>
 Last updated March 29, 2023.<BR>
-Since March 29, 2023, July 25, 2007.
+Since July 25, 2007.
 </FONT></CENTER>
 
 </TD></TR></TABLE>
