--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,9 +2,9 @@
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=x-euc-jp">
 <TITLE>Disclaimer, Kazuhisa J. Kawai</TITLE>
 </HEAD>
-<!-- Copyright (c) 1994-2022, Kazuhisa Kawai, All rights reserved.	-->
+<!-- Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.	-->
 <!-- 									-->
-<!-- 	Disclaimer.HTML¡§²Ï¹çÏÂµ×£×£×£×¥µ¡¼¥Ó¥¹ Disclaimer Ê¸½ñ		-->
+<!-- 	Disclaimer.HTMLï¼šæ²³åˆå’Œä¹…ï¼·ï¼·ï¼·ã‚µãƒ¼ãƒ“ã‚¹ Disclaimer æ–‡æ›¸		-->
 <!-- 									-->
 
 <BODY>
@@ -13,7 +13,7 @@
 <HR NOSHADE SIZE="1"><P>
 
 World Wide Web Service<BR>
-Copyright (c) 1994-2022, Kazuhisa Kawai, All rights reserved.
+Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.
 <P>
 
 <B>There is NO WARRANTY of the service.</B><P>
@@ -26,7 +26,7 @@ to <A HREF="//www.ita.cs.tut.ac.jp/~kawai/">kawai@tut.jp</A><BR>
 <ADDRESS>
 The disclaimer for this page is this notice</A>.<P>
 
-Last updated January 4, 2022.<BR>
+Last updated March 29, 2023.<BR>
 Since May 31, 1994.</ADDRESS>
 
 </BODY>
