--- a/index.html
+++ b/index.html
@@ -1,55 +1,52 @@
-<HTML><HEAD>
-<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=x-euc-jp">
-<META HTTP-EQUIV="imagetoolbar" CONTENT="no">
-<TITLE>Cafe Scientifique in HIGASHI-MIKAWA, K. J. Kawai.</TITLE>
-</HEAD></HTML>
+﻿<HTML><HEAD>
+<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+<TITLE>Kazuhisa J. Kawai</TITLE>
+</HEAD>
 
-<!-- Copyright (c) 2007, Kazuhisa Kawai, All rights reserved.	-->
-<!-- 								-->
-<!-- 	Index.HTML：東三河サイエンスカフェ：トップページ	-->
-<!-- 								-->
 
-<BODY BGCOLOR=#660000 TEXT=black VLINK=#660000 LINK=#660000>
+<!-- Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.	-->
+<BODY BGCOLOR=white>
 
-<CENTER>
-
-<TABLE WIDTH=802 CELLPADDING=0 CELLSPACING=0 BORDER=0>
-<TR VALING=top>
-<TD WIDTH=1 BGCOLOR=black><IMG SRC="./1pixel.gif" WIDTH=1 HEIGHT=1>
-</TD>
-<TD>
-<TABLE WIDTH=800 CELLPADDING=10 CELLSPACING=0 BORDER=0>
-<TR VALING=top><TD BGCOLOR=white>
-
-<P>
-<CENTER>
-<IMG SRC="./logo-anime-wo-30.gif" WIDTH=512 HEIGHT=384 ALT="東三河サイエンスカフェ（ロゴ）" ALIGN=TOP>
-</CENTER>
-<P>
- 
-<P>
-<CENTER>
-<a href="./230406kawai.pdf">第３０３回パンフレット</a>
-</CENTER>
-<P>
- 
-<TABLE BORDER=0 BGCOLOR=#660000 width=100%><TR>
-<TD align=center> </TD></TR></TABLE>
-
-<CENTER><FONT face="Arial, Sans-Serif" size="2">
-<A HREF="./disclaimer.html">Copyright (c) 2007-2023, Kazuhisa Kawai, All Rights Reserved.</A><BR>
-Please send comments to:
- <A HREF="mailto:kawai@tut.jp">kawai@tut.jp</A><BR>
-Last updated March 29, 2023.<BR>
-Since July 25, 2007.
-</FONT></CENTER>
+<TABLE><TR><TD>
+<IMG align=middle SRC="kawai.jpg" ALT="K.J.Kawai" WIDTH=160 HEIGHT=120>
+</TD><TD VALIGN=center>
+<FONT SIZE="+2">　河合 和久<BR>　ホームページ　</FONT><BR>
+</TD><TD>
 
 </TD></TR></TABLE>
+<FONT SIZE="-2">子ども開放プラン「ネットワークのしくみ」より</FONT><BR>
 
-<TD WIDTH=1 BGCOLOR=black><IMG SRC="./1pixel.gif" WIDTH=1 HEIGHT=1>
-</TD>
-</TR></TABLE>
+<HR NOSHADE SIZE="1"><P>
 
-</CENTER>
+<UL>
+
+<LI>Intro. to ICT.(c)（ＩＣＴ基礎ｃ）<A HREF="https://lms.imc.tut.ac.jp/course/view.php?id=778" target="_blank">【Moodle LMS へ】</A>(2023. Spring Semester.)
+<LI>ソフトウェア演習Ｉａ<A HREF="https://kyomu.office.tut.ac.jp/portal/" target="_blank">【教務情報システムへ】</A><A HREF="https://lms.imc.tut.ac.jp/course/view.php?id=801" target="_blank">【Moodle LMS へ】</A>(2023. Spring First Half Semester.)
+<LI>情報教育学特論<A HREF="https://classroom.google.com/" target="_blank">【Google Classroom へ】</A>(2023. Spring Semester.)
+<p>
+
+<LI><A HREF="https://kj65kawai.github.io/cs/" target="_blank">東三河サイエンスカフェ</A>(2007.10.04-)
+<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/hssc/" target="_blank">愛知県高文連 自然科学専門部 情報講習会</A>(2023.TBA.)
+<LI><A HREF="https://stbrains.co.jp/pews/" target="_blank">豊橋プログラミング教育勉強会</A>
+(2020.01.11-)
+<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/stc/" target="_blank">Summer TECH-CAMP 2023</A>(2023.TBA.)
+<P>
+
+<LI>ソフトウェア設計論【遠隔のみ】<A HREF="https://cite.tut.ac.jp/course/ehelp_dlv1-05" target="_blank">シラバス</A>
+<!--- （<A HREF="https://lms.imc.tut.ac.jp/">Moodle</A>） --->
+(2023. Autumn Semester.)
+<LI><A HREF="schedule.html">オフィスアワー（予定表）</A>
+<P>
+
+</UL>
+
+<HR NOSHADE SIZE="1">
+
+<A HREF="disclaimer.html">Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.</A><BR>
+
+Please send comments to kawai@tut.jp<BR>
+Last updated April 14, 2023.<BR>
+Since May 31, 1994.
+
 </BODY>
 </HTML>
