--- a/disclaimer.html
+++ b/disclaimer.html
@@ -1,11 +1,8 @@
 <HTML><HEAD>
-<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=x-euc-jp">
+<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
 <TITLE>Disclaimer, Kazuhisa J. Kawai</TITLE>
 </HEAD>
 <!-- Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.	-->
-<!-- 									-->
-<!-- 	Disclaimer.HTML：河合和久ＷＷＷサービス Disclaimer 文書		-->
-<!-- 									-->
 
 <BODY>
 <H1>Disclaimer Notices</H1>
@@ -26,7 +23,7 @@ to <A HREF="//www.ita.cs.tut.ac.jp/~kawai/">kawai@tut.jp</A><BR>
 <ADDRESS>
 The disclaimer for this page is this notice</A>.<P>
 
-Last updated March 29, 2023.<BR>
+Last updated April 14, 2023.<BR>
 Since May 31, 1994.</ADDRESS>
 
 </BODY>
