--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>
 
 <LI><A HREF="https://kj65kawai.github.io/cs/" target="_blank">東三河サイエンスカフェ</A>　(2007.10.04-)
-<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/hssc/" target="_blank">愛知県高文連 自然科学専門部 情報講習会</A>　(2023.TBA.)
+<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25><A HREF="https://kj65kawai.github.io/hssc/" target="_blank">愛知県高文連 自然科学専門部 情報講習会</A>　(2023.TBA.)
 <LI><A HREF="https://stbrains.co.jp/pews/" target="_blank">豊橋プログラミング教育勉強会</A>　(2020.01.11-)
 <LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/stc/" target="_blank">Summer TECH-CAMP 2023</A>　(2023.TBA.)
 <P>
