--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
 
 <UL>
 
-<LI>Intro. to ICT.(c)（ＩＣＴ基礎ｃ） <A HREF="https://lms.imc.tut.ac.jp/course/view.php?id=778" target="_blank">【Moodle LMS へ】</A>　(2023. Spring Semester.)
-<LI>ソフトウェア演習Ｉａ <A HREF="https://kyomu.office.tut.ac.jp/portal/" target="_blank">【教務情報システムへ】</A> </A HREF="https://lms.imc.tut.ac.jp/course/view.php?id=801" target="_blank">【Moodle LMS へ】</A>　(2023. Spring First Half Semester.)
-<LI>情報教育学特論 <A HREF="https://classroom.google.com/" target="_blank">【Google Classroom へ】</A>　(2023. Spring Semester.)
+<LI>Intro. to ICT.(c)（ＩＣＴ基礎ｃ）<A HREF="https://lms.imc.tut.ac.jp/course/view.php?id=778" target="_blank">【Moodle LMS へ】</A>(2023. Spring Semester.)
+<LI>ソフトウェア演習Ｉａ<A HREF="https://kyomu.office.tut.ac.jp/portal/" target="_blank">【教務情報システムへ】</A><A HREF="https://lms.imc.tut.ac.jp/course/view.php?id=801" target="_blank">【Moodle LMS へ】</A>(2023. Spring First Half Semester.)
+<LI>情報教育学特論<A HREF="https://classroom.google.com/" target="_blank">【Google Classroom へ】</A>(2023. Spring Semester.)
 <p>
 
-<LI><A HREF="https://kj65kawai.github.io/cs/" target="_blank">東三河サイエンスカフェ</A>　(2007.10.04-)
-<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25><A HREF="https://kj65kawai.github.io/hssc/" target="_blank">愛知県高文連 自然科学専門部 情報講習会</A>　(2023.TBA.)
-<LI><A HREF="https://stbrains.co.jp/pews/" target="_blank">豊橋プログラミング教育勉強会</A>　(2020.01.11-)
-<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/stc/" target="_blank">Summer TECH-CAMP 2023</A>　(2023.TBA.)
+<LI><A HREF="https://kj65kawai.github.io/cs/" target="_blank">東三河サイエンスカフェ</A>(2007.10.04-)
+<LI></A HREF="https://kj65kawai.github.io/hssc/" target="_blank">愛知県高文連 自然科学専門部 情報講習会</A>
+<LI><A HREF="https://stbrains.co.jp/pews/" target="_blank">豊橋プログラミング教育勉強会</A>
+(2020.01.11-)
+<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/stc/" target="_blank">Summer TECH-CAMP 2023</A>(2023.TBA.)
 <P>
 
 <LI>ソフトウェア設計論【遠隔のみ】<A HREF="https://cite.tut.ac.jp/course/ehelp_dlv1-05" target="_blank">シラバス</A>
 <!--- （<A HREF="https://lms.imc.tut.ac.jp/">Moodle</A>） --->
 (2023. Autumn Semester.)
-<LI><A HREF="schedule.html" target="_blank">オフィスアワー（予定表）</A>
+<LI><A HREF="schedule.html">オフィスアワー（予定表）</A>
 <P>
 
 </UL>
