--- a/schedule.html
+++ b/schedule.html
@@ -41,9 +41,9 @@
 <TR>
 <TD ALIGN=center>13:00<BR>14:30</TD><TD ALIGN=center>３時限</TD>
 <TD ALIGN=center>□</TD>
-<TD ALIGN=center BGCOLOR="#FFCCCC"></A HREF="/~kawai/gi/public/">Introduction<br />to<br />ICT.c</A><br />imc.MM</TD>
-<TD ALIGN=center rowspan="2" BGCOLOR="#CCCCCC">輪講<br>調整中</TD><TD ALIGN=center>□</TD>
-<TD ALIGN=center rowspan="2" BGCOLOR="#CCCCCC">SVC<br>調整中</TD>
+<TD ALIGN=center BGCOLOR="#FFCCCC"></A HREF="/~kawai/gi/public/">Introduction<br />to<br />ICT.c</A><br />F1-204</TD>
+<TD ALIGN=center rowspan="2" BGCOLOR="#CCCCCC">輪講<br>SVC</TD><TD ALIGN=center>□</TD>
+<TD ALIGN=center rowspan="2" BGCOLOR="#CCCCCC">SVC</TD>
 </TR>
 <TR>
 <TD ALIGN=center>14:40<BR>16:10</TD><TD ALIGN=center>４時限</TD>
