--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <LI><A HREF="https://kj65kawai.github.io/hssc/" target="_blank">愛知県高文連 自然科学専門部 情報講習会</A>(2023.08.06.)
 <LI><A HREF="https://stbrains.co.jp/pews/" target="_blank">豊橋プログラミング教育勉強会</A>
 (2020.01.11--)
-<LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25></A HREF="https://kj65kawai.github.io/stc/" target="_blank">Summer TECH-CAMP 2023</A>(2023.08.22--23.)
+<!--- <LI><IMG align=middle SRC="under-construction.gif" WIDTH=72 HEIGHT=25> --->
+<A HREF="https://kj65kawai.github.io/stc/" target="_blank">Summer TECH-CAMP 2023</A>(2023.08.22--23.)
 <P>
 
 <LI>ソフトウェア設計論【遠隔のみ】<A HREF="https://cite.tut.ac.jp/course/ehelp_dlv1-05" target="_blank">シラバス</A>
@@ -45,7 +46,7 @@
 <A HREF="disclaimer.html">Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.</A><BR>
 
 Please send comments to kawai@tut.jp<BR>
-Last updated April 14, 2023.<BR>
+Last updated July 6, 2023.<BR>
 Since May 31, 1994.
 
 </BODY>
