--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,7 @@
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
 <TITLE>Disclaimer, Kazuhisa J. Kawai</TITLE>
 </HEAD>
-<!-- Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.	-->
+<!-- Copyright (c) 1994-2024, Kazuhisa Kawai, All rights reserved.	-->
 
 <BODY>
 <H1>Disclaimer Notices</H1>
@@ -10,20 +10,19 @@
 <HR NOSHADE SIZE="1"><P>
 
 World Wide Web Service<BR>
-Copyright (c) 1994-2023, Kazuhisa Kawai, All rights reserved.
+Copyright (c) 1994-2024, Kazuhisa Kawai, All rights reserved.
 <P>
 
 <B>There is NO WARRANTY of the service.</B><P>
 
-If you notice something incorrect or have any comment, please contact
-to <A HREF="//www.ita.cs.tut.ac.jp/~kawai/">kawai@tut.jp</A><BR>
+If you notice something incorrect or have any comment, please contact to kawai@tut.jp <BR>
 
 <HR NOSHADE SIZE="1"><P>
 
 <ADDRESS>
 The disclaimer for this page is this notice</A>.<P>
 
-Last updated April 14, 2023.<BR>
+Last updated January 5, 2024.<BR>
 Since May 31, 1994.</ADDRESS>
 
 </BODY>
